then you win. –- Mahatma Gandhi

Wed, Mar 11, 2009
---------------------------------------------------------------------
- Installed [factory_girl] plugin.
- Created model factories for all core models.
- Rewrote account controller specs to use factories instead of mocks.
- Started refactoring opportunity controller specs to use factories instead of mocks

Tue, Mar 10, 2009
---------------------------------------------------------------------
- Put in place inline for Lead editing and conversion.
- Started with inline forms for Task editing.
- Depreciated contexts, refactored application's JavaScript.

Mon, Mar 9, 2009
---------------------------------------------------------------------
- Put in place inline edit forms for Campaigns, Accounts, Contacts, and Opportunities.

Sun, Mar 8, 2009
---------------------------------------------------------------------
- More work on inline edit and create forms.

Sat, Mar 7, 2009
---------------------------------------------------------------------
- Moved context code to module and made it available to controllers and views.
- Started with [Edit Contact] form.

Fri, Mar 6, 2009
---------------------------------------------------------------------
- Implemented [Edit Account] form.
- Implemented basic functions of [Edit Campaign].

Thu, Mar 5, 2009
---------------------------------------------------------------------
- Moved some JavaScript code from helpers to application.js.
- Added support for showing interchangeable inline forms (Convert and Edit).
- Refactored saving/restoring context for inline forms.

Wed, Mar 4, 2009
---------------------------------------------------------------------
- Refactored tools menu in lists to use block div.
- Refactored lead conversion to use remote form.
- Started with the [Edit Lead] inline form.

Tue, Mar 3, 2009
---------------------------------------------------------------------
- Refactored lead star rating to always show 5 stars (grayed out or not).