@@ -24,7 +24,7 @@ class CampaignsController < ApplicationController
   #----------------------------------------------------------------------------
   def show
     @campaign = Campaign.find(params[:id])
-    @stage = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
+    @stage = Setting.as_hash(:opportunity_stage)
     @comment = Comment.new
 
     respond_to do |format|
