@@ -1,5 +1,5 @@
 .filters#filters
-  - Setting.lead_status.invert.sort.each do |key, value|
+  - Setting.invert(:lead_status).each do |key, value|
     .check_box{:style => "border-bottom: 1px silver dotted;"}
       %div{:style => "float:right;"}
         = @lead_status_total[value]
