@@ -3,7 +3,7 @@ require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 describe OpportunitiesController do
 
   def get_data_for_sidebar
-    @stage = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
+    @stage = Setting.as_hash(:opportunity_stage)
   end
 
   before(:each) do
@@ -70,7 +70,7 @@ describe OpportunitiesController do
   
     it "should expose the requested opportunity as @opportunity and render [show] template" do
       @opportunity = Factory(:opportunity, :id => 42)
-      @stage = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
+      @stage = Setting.as_hash(:opportunity_stage)
       @comment = Comment.new
 
       get :show, :id => 42
@@ -83,7 +83,7 @@ describe OpportunitiesController do
 
       it "should render the requested opportunity as xml" do
         @opportunity = Factory(:opportunity, :id => 42)
-        @stage = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
+        @stage = Setting.as_hash(:opportunity_stage)
 
         request.env["HTTP_ACCEPT"] = "application/xml"
         get :show, :id => 42
